[package]
name = "dark-privilege"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
colored_json = "5.0.0"
enigo = "0.2.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
whoami = "1.5.1"
windows-version = "0.1.1"
[dependencies.windows]
version = "0.58.0"
features = [
    "Wdk_System_SystemServices",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
